--- a/note1.ipynb
+++ b/note1.ipynb
@@ -19,12 +19,12 @@
           "end_time": "2023-07-23T18:52:14.014349472Z",
           "start_time": "2023-07-23T18:52:13.644577067Z"
         },
+        "id": "9OEin9pu26k8",
+        "outputId": "82cc3216-d17d-4a24-850f-bb93f496fa2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "id": "9OEin9pu26k8",
-        "outputId": "82cc3216-d17d-4a24-850f-bb93f496fa2c"
+        }
       },
       "outputs": [
         {
@@ -51,11 +51,11 @@
         "ls"
       ],
       "metadata": {
+        "id": "wJVJI3kp3Ja5",
+        "outputId": "dde52ff4-1bef-4659-ab07-00537faae523",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "wJVJI3kp3Ja5",
-        "outputId": "dde52ff4-1bef-4659-ab07-00537faae523"
+        }
       },
       "execution_count": null,
       "outputs": [
@@ -70,9 +70,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "%cd sample_data\n"
+      ],
+      "metadata": {
+        "id": "rOyJl0s23SYw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1f5caad1-f0ed-45f3-e828-3827ca4cbafa"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/sample_data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "rOyJl0s23SYw"
+        "id": "FzyYpfHr5ZPV"
       },
       "execution_count": null,
       "outputs": []
